added load in animation

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
   
   <section class="fog">
-    <div class="absolute-bg"></div>
+    <div class="bg intro"></div>
     <div class="fog-container">
       <div class="fog-img fog-img-first"></div>
       <div class="fog-img fog-img-second"></div>
     </div>
 
-    <div class="title">
+    <div class="title fade-in">
       <h1>Curse of Strahd</h1>
-      <button class="button-40" role="button">Enter Barovia</button>
+      <a href="./home.html"><button class="button-40" type="button" role="button">Enter Barovia</button></a>
     </div>
   </section>
 
