--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="body">
   
-  <section class="fog">
+  <section class="fog fade-in">
     <div class="bg intro"></div>
     <div class="fog-container">
       <div class="fog-img fog-img-first"></div>
