--- a/index.html
+++ b/index.html
@@ -7,23 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script defer src="script.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="body">
+<body id="body">
   
   <section class="fog fade-in">
     <div class="bg intro"></div>
     <div class="fog-container">
       <div class="fog-img fog-img-first"></div>
-      <div class="fog-img fog-img-second"></div>
     </div>
 
     <div class="title fade-in">
       <h1>Curse of Strahd</h1>
-      <a href="./home.html"><button class="button-40" type="button" role="button">Enter Barovia</button></a>
+      <a href="javascript:void" onclick="onBtnClickHandle('home.html')"><button class="button-40" type="button" role="button">Enter Barovia</button></a>
     </div>
   </section>
-
 
 </body>
 </html>
