some of character page done

--- a/characters.html
+++ b/characters.html
@@ -18,7 +18,43 @@
     </div>
 
     <div class="box fade-in">
-      
+      <div class="characterList">
+        <div class="Baba characterItem">
+          <h1>Baba</h1>
+          <div class="characterBio">
+            <img src="imgs/Baba.png" alt="Baba">
+            <h4>Lvl 5 Elf, Rogue (Thief)</h4>
+          </div>
+        </div>
+        <div class="Rowan characterItem">
+          <h1>Rowan</h1>
+          <div class="characterBio">
+           <img src="imgs/half_elf_wizard_by_captdiablo_deeqlfa-fullview.jpeg" alt="">
+           <h4>Level 5 Half Elf, Wizard</h4>
+          </div>
+        </div>
+        <div class="Maldin characterItem">
+          <h1>Maldinn</h1>
+          <div class="characterBio">
+            <img src="imgs/Maldinn.png" alt="">
+            <h4>Level 5 Dragonborn, Paladin</h4>
+          </div>
+        </div>
+        <div class="Mixy characterItem">
+          <h1>Mixy</h1>
+          <div class="characterBio">
+            <img src="imgs/Mxy_of_the_Star.png" alt="">
+            <h4>Level 5 Goblin, Druid</h4>
+          </div>
+        </div>
+        <div class="Daniel characterItem">
+          <h1>Dungeon Master</h1>
+          <div class="characterBio">
+            <img src="imgs/Screen Shot 2022-12-06 at 6.53.34 PM.png" alt="">
+            <h4>Level 22 Human, Canadian</h4>
+          </div>
+        </div>
+      </div>
     </div>
       
   </section>
