have some stats done

--- a/characters.html
+++ b/characters.html
@@ -17,15 +17,21 @@
       <div class="fog-img fog-img-second"></div>
     </div>
 
+    <nav class="fade-in navBar">
+      <a href="javascript:void" onclick="onBtnClickHandle('home.html')"><button class="button-40" type="button" role="button">Back</button></a>
+    </nav>
+
     <div class="box fade-in">
       <div class="characterList">
-        <div class="Baba characterItem">
-          <h1>Baba</h1>
-          <div class="characterBio">
-            <img src="imgs/Baba.png" alt="Baba">
-            <h4>Lvl 5 Elf, Rogue (Thief)</h4>
+        <a href="javascript:void" onclick="onBtnClickHandle('./characters/baba.html')">
+          <div class="Baba characterItem">
+            <h1>Baba</h1>
+            <div class="characterBio">
+              <img src="imgs/Baba.png" alt="Baba">
+              <h4>Lvl 5 Elf, Rogue (Thief)</h4>
+            </div>
           </div>
-        </div>
+        </a>
         <div class="Rowan characterItem">
           <h1>Rowan</h1>
           <div class="characterBio">
