--- a/home.html
+++ b/home.html
@@ -17,6 +17,10 @@
       <div class="fog-img fog-img-second"></div>
     </div>
 
+    <nav class="fade-in navBar">
+      <a href="javascript:void" onclick="onBtnClickHandle('index.html')"><button class="button-40" type="button" role="button">Back</button></a>
+    </nav>
+
     <div class="box fade-in">
       <div class="characters">
         <a href="javascript:void" onclick="onBtnClickHandle('characters.html')">
