characters section rough draft

--- a/characters/baba.html
+++ b/characters/baba.html
@@ -5,20 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../mediaQueries.css">
   <script defer src="../script.js"></script>
   <title>Baba</title>
 </head>
 <body id="body">
 
-  <section class="fog fade-in">
-    <div class="bg homebg"></div>
-    <div class="fog-container">
-      <div class="fog-img fog-img-first"></div>
-      <div class="fog-img fog-img-second"></div>
-    </div>
-
     <nav class="fade-in navBar">
-      <a href="javascript:void" onclick="onBtnClickHandle('../home.html')"><button class="button-40" type="button" role="button">Back</button></a>
+      <a href="javascript:void" onclick="onBtnClickHandle('../characters.html')"><button class="button-40" type="button" role="button">Back</button></a>
     </nav>
 
     <div class="box fade-in">
@@ -33,11 +27,11 @@
           <ul class="stats">
             <li>
               <h6>Strength</h6>
-              <h6>10</h6>
+              <h6>11</h6>
             </li>
             <li>
               <h6>Dexterity</h6>
-              <h6>14</h6>
+              <h6>18</h6>
             </li>
             <li>
               <h6>Constitution</h6>
@@ -45,19 +39,31 @@
             </li>
             <li>
               <h6>Intelligence</h6>
-              <h6>16</h6>
+              <h6>14</h6>
             </li>
             <li>
               <h6>Wisdom</h6>
-              <h6>8</h6>
+              <h6>12</h6>
             </li>
             <li>
               <h6>Charisma</h6>
-              <h6>11</h6>
+              <h6>15</h6>
             </li>
           </ul>
         </div>
+        <div class="characterStory">
+          <p>
+            During Baba's youth, she become estranged from her village during a competitive game of hide-and-seek.
+          </p>
+          <p>
+            Lost, cold, and afraid, a new family adopted her - a herd of sheep. There she was crowned the Baa Baa Bandit and met her wooly husband Sean. 
+          </p>
+          <p>
+            One morning, Baba awoke without her beloved Sean by her side. Traumatized by her husband's sudden disappearance, Baba has ventured to Barovia in search for her one true love, Sean.
+          </p>
+        </div>
       </div>
+
     </div>
       
   </section>
