--- a/characters.html
+++ b/characters.html
@@ -6,6 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
+  <style>
+    /* Character Page Media Queries */
+@media screen and (max-width: 1200px) {
+  .characterList {
+    display:inline;
+  }
+  .characterItem {
+    height: 400px;
+    width: 500px;
+  }
+  #body { 
+    height: 2500px;
+  }
+  .fog-container{
+    height: 2500px;
+  }
+  .fog-img {
+    background-size: cover;
+    height: 100%;
+  }
+
+}
+  </style>
   <title>Characters</title>
 </head>
 <body id="body">
@@ -32,37 +55,46 @@
             </div>
           </div>
         </a>
-        <div class="Rowan characterItem">
-          <h1>Rowan</h1>
-          <div class="characterBio">
-           <img src="imgs/half_elf_wizard_by_captdiablo_deeqlfa-fullview.jpeg" alt="">
-           <h4>Level 5 Half Elf, Wizard</h4>
+        <a href="javascript:void" onclick="onBtnClickHandle('./characters/rowan.html')">
+          <div class="Rowan characterItem">
+            <h1>Rowan</h1>
+            <div class="characterBio">
+              <img src="imgs/half_elf_wizard_by_captdiablo_deeqlfa-fullview.jpeg" alt="">
+              <h4>Level 5 Half Elf, Wizard</h4>
+            </div>
           </div>
-        </div>
-        <div class="Maldin characterItem">
-          <h1>Maldinn</h1>
-          <div class="characterBio">
-            <img src="imgs/Maldinn.png" alt="">
-            <h4>Level 5 Dragonborn, Paladin</h4>
+        </a>
+        <a href="javascript:void" onclick="onBtnClickHandle('./characters/maldinn.html')">
+          <div class="Maldin characterItem">
+            <h1>Maldinn</h1>
+            <div class="characterBio">
+              <img src="imgs/Maldinn.png" alt="">
+              <h4>Level 5 Dragonborn, Paladin</h4>
+            </div>
           </div>
-        </div>
-        <div class="Mixy characterItem">
-          <h1>Mixy</h1>
-          <div class="characterBio">
-            <img src="imgs/Mxy_of_the_Star.png" alt="">
-            <h4>Level 5 Goblin, Druid</h4>
+        </a>
+        <a href="javascript:void" onclick="onBtnClickHandle('./characters/mixy.html')">
+          <div class="Mixy characterItem">
+            <h1>Mixy</h1>
+            <div class="characterBio">
+              <img src="imgs/Mxy_of_the_Star.png" alt="">
+              <h4>Level 5 Goblin, Druid</h4>
+            </div>
           </div>
-        </div>
-        <div class="Daniel characterItem">
-          <h1>Dungeon Master</h1>
-          <div class="characterBio">
-            <img src="imgs/Screen Shot 2022-12-06 at 6.53.34 PM.png" alt="">
-            <h4>Level 22 Human, Canadian</h4>
+        </a>
+        <a href="javascript:void" onclick="onBtnClickHandle('./characters/daniel.html')">
+          <div class="Daniel characterItem">
+            <h1>Dungeon Master</h1>
+            <div class="characterBio">
+              <img src="imgs/Screen Shot 2022-12-06 at 6.53.34 PM.png" alt="">
+              <h4>Level 22 Human, Canadian</h4>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
       
   </section>
+  
 </body>
 </html>
