--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="bg intro"></div>
     <div class="fog-container">
       <div class="fog-img fog-img-first"></div>
+      <div class="fog-img fog-img-second"></div>
     </div>
 
     <div class="title fade-in">
