rough draft done

--- a/campaign.html
+++ b/campaign.html
@@ -5,26 +5,66 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="campaign.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script defer src="script.js"></script>
+  <script defer src="campaign.js"></script>
   <title>Campaign</title>
 </head>
 <body id="body">
+  <nav class="fade-in navBar">
+    <a href="javascript:void" onclick="onBtnClickHandle('home.html')"><button class="button-40" type="button" role="button">Back</button></a>
+  </nav>
 
-  <section class="fog fade-in">
-    <div class="bg homebg"></div>
-    <div class="fog-container">
-      <div class="fog-img fog-img-first"></div>
-      <div class="fog-img fog-img-second"></div>
-    </div>
+  <div class="campaignDiv fade-in">
+    <h4>“The mists fell about you like a funeral shroud, and in that moment Barovia became your tomb.”</h4>
+      <!--<div class="typewriter">
+        <nav>-Strahd</nav>
+      </div>-->
+      <div class="session-1 fade-in">
+        <h2>Session 1</h2>
+        <img src="./imgs/wagon.gif" alt="">
+        
+        <div class="session-description">
+          <p>
+            Three explorers: Mixy, Peren, and Rowan, embark on an expedition (from Neverwinter) to Icewind Dale in an attempt to re-establish communications three years after the perpetual winter has gripped the region. <br> En route, Mixy influences the others to enter a mysterious mist that quickly renders them unconscious.
+            <br>
+            <img src="./imgs/sleep.gif" alt="">
+            ~
+          </p>
+          <p>
+            Doot, a minstrel earning a modest living in Daggerford, recently banded with the Vistani on the promise of warm reception in Waterdeep.<br> He is joined by Maldinn and BaBa Bandit, who have grievances of varying legitimacy towards the nomads.<br> After travelling for a day, the crew decide to make camp on the perimeter of the Vistani encampment.<br> They are roused in unfamiliar surroundings with the three explorers added to the mix.
+            <br>
+            <img src="./imgs/party.gif" alt="">
+            ~
+          </p>
+          <p>
+            The land our reluctant pilgrims find themselves in is strange; Maldinn determines that there is evil afoot and Doot confirms that dangers lurk the forests.<br> The coincidental company find the path and travel down it in hopes finding Waterdeep, or at least, safety.
+            <br>
+            ~
+          </p>
+          <p>
+            Coming upon the village, it appears to be in poor shape - what residents remain in the ramshackle homes are wary.<br> As the party explores, they are intercepted by two children, Thornboldt and Rosavalda. They claim that a monster is in their home and their parents are within, pleading for aid from the travelers.
+            <br>
+            <div class="imgs">
+              <img src="./imgs/girlpixel.png" alt="">
+              <img src="./imgs/boypixel.png" alt="">
+            </div>
+            ~
+          </p>
+          <p>
+            For whatever individual reasons, the crew enters and begin to probe the mansion.
+            <br>
+            ~
+          </p>
+          <p>
+            Peren finds a secret room with a skeleton clutching a letter from an individual named Lord Strahd Von Zarovich. 
+          </p>
+        </div>
+      </div>
+  </div>
 
-    <nav class="fade-in navBar">
-      <a href="javascript:void" onclick="onBtnClickHandle('home.html')"><button class="button-40" type="button" role="button">Back</button></a>
-    </nav>
 
-    <div class="box fade-in">
-      <img src="wagon.gif" alt="">
-    </div>
-      
-  </section>
+
 </body>
 </html>
