--- a/characters.html
+++ b/characters.html
@@ -17,10 +17,10 @@
     width: 500px;
   }
   #body { 
-    height: 2500px;
+    height: 2800px;
   }
   .fog-container{
-    height: 2500px;
+    height: 2800px;
   }
   .fog-img {
     background-size: cover;
@@ -51,7 +51,7 @@
             <h1>Baba</h1>
             <div class="characterBio">
               <img src="imgs/Baba.png" alt="Baba">
-              <h4>Lvl 5 Elf, Rogue (Thief)</h4>
+              <h4>Lvl 5 Elf, Rogue</h4>
             </div>
           </div>
         </a>
