--- a/characters/mixy.html
+++ b/characters/mixy.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="bio">
-          <h4>Level 5 Druid (Circle of Stars), Darkwood Goblin</h4>
+          <h4>Level 5 Darkwood Goblin, Druid (Circle of Stars)</h4>
         </div>
         <div class="characterStory">
           <p>
