--- a/characters/rowan.html
+++ b/characters/rowan.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="bio">
-          <h4>Level 5 Wizard, Half-Elf</h4>
+          <h4>Level 5 Half-Elf, Wizard</h4>
         </div>
         <div class="characterStory">
           <p>
