trying to fit mobile formatting

--- a/home.html
+++ b/home.html
@@ -6,6 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
+  <style>
+    /* Character Page Media Queries */
+@media screen and (max-width: 1200px) {
+  .box {
+    display:inline;
+  }
+  .characters, .campaign {
+    padding-top: 50px;
+    height: 500px;
+    width: 500px;
+  }
+  #body { 
+    height: 1500px;
+  }
+  .fog-container{
+    height: 1500px;
+  }
+  .fog-img {
+    background-size: cover;
+    height: 100%;
+  }
+
+}
+  </style>
   <title>Home</title>
 </head>
 <body id="body">
