testing out width

--- a/home.html
+++ b/home.html
@@ -19,9 +19,11 @@
   }
   #body { 
     height: 1500px;
+    width: 1000px;
   }
   .fog-container{
     height: 1500px;
+    width: 1000px;
   }
   .fog-img {
     background-size: cover;
