--- a/characters.html
+++ b/characters.html
@@ -18,13 +18,16 @@
   }
   #body { 
     height: 2800px;
+    width: 700px;
   }
   .fog-container{
     height: 2800px;
+    width: 700px;
   }
   .fog-img {
     background-size: cover;
     height: 100%;
+    width: 700px;
   }
 
 }
