--- a/characters/graveyard.html
+++ b/characters/graveyard.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="../mediaQueries.css">
   <script defer src="../script.js"></script>
-  <title>Maldinn</title>
+  <title>Mxy</title>
 </head>
 <body id="body">
 
