updated mxy description

--- a/characters/graveyard.html
+++ b/characters/graveyard.html
@@ -36,6 +36,8 @@
           <p>
             He is still skeptical of the new group he finds himself in, but after his encounter with death, he believes there is safety in numbers and is trying to grasp his new somewhat physically altered self.
           </p>
+          <p>Mxy met his fate as a druid dragged his body across spikes during the battle of Yesterhill. His comrades watched his untimely and gruesome death, only feet away from being able to save him.</p>
+          <p>Mxy's soul remains in Barovia, in eternal suffering and torture until reincarnation into a newborn.</p>
         </div>
       </div>
 
