did some cleaning up

--- a/home.html
+++ b/home.html
@@ -29,6 +29,12 @@
     background-size: cover;
     height: 100%;
   }
+  .fog-img-first{
+    background: black;
+  }
+  .fog-img-second{
+    background: black;
+  }
 
 }
   </style>
