updated rowans img

--- a/characters.html
+++ b/characters.html
@@ -79,7 +79,7 @@
           <div class="Rowan characterItem">
             <h1>Rowan</h1>
             <div class="characterBio">
-              <img src="imgs/half_elf_wizard_by_captdiablo_deeqlfa-fullview.jpeg" alt="">
+              <img src="imgs/Rowan.png" alt="">
               <h4>Level 5 Half Elf, Wizard</h4>
             </div>
           </div>
