--- a/characters/rowan.html
+++ b/characters/rowan.html
@@ -19,7 +19,7 @@
       <div class="characterBioBox">
         <h1>Rowan</h1>
         <div class="imgBox">
-          <img src="../imgs/half_elf_wizard_by_captdiablo_deeqlfa-fullview.jpeg" alt="Rowan">
+          <img src="../imgs/Rowan.png" alt="Rowan">
         </div>
 
         <div class="bio">
