fixed funeral img

--- a/characters.html
+++ b/characters.html
@@ -114,7 +114,7 @@
       </div>
       <div class="characterList funeral">
         <a href="javascript:void" onclick="onBtnClickHandle('./characters/graveyard.html')">
-            <img src="./imgs/rip.png.crdownload" alt=""> 
+            <img src="./imgs/rip.png" alt=""> 
         </a>
       </div>
     </div>
